Added fabric_key_type field to SshKeyLong; renamed name field to ssh_key_type; moved COmanage delete code into expire rather than garbage cleanup;
